# nonebot-plugin-shindan

./: README.md  pyproject.toml
nonebot_plugin_shindan/: __init__.py  config.py  manager.py  model.py  onebot.py  shindan_list.py  shindanmaker.py
nonebot_plugin_shindan/migrations/: 02bb36c59899_init_db.py  0b2f6bf54834_set_default_value.py  3a0f19b79fb5_init_db.py  fdc15c338ecc_shindan_id_type.py
nonebot_plugin_shindan/templates/: app.css  app.js  chart.js  shindan.html  shindan_list.html
