[tool.poetry]
name = "nonebot_plugin_shindan"
version = "0.5.0"
description = "Nonebot2 plugin for using ShindanMaker"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-shindan"
repository = "https://github.com/noneplugin/nonebot-plugin-shindan"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.1", extras = ["fastapi"] }
nonebot-plugin-send-anything-anywhere = "^0.3.0"
nonebot-plugin-htmlrender = "^0.2.0"
nonebot-plugin-orm = "^0.2.3"
nonebot-plugin-userinfo = "^0.1.2"
nonebot-plugin-alconna = ">=0.19.2"
httpx = ">=0.19.0,<1.0.0"
lxml = "^4.0.0"
Jinja2 = "^3.0.0"
beautifulsoup4 = "^4.0.0"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.0"
nonebot-plugin-orm = { version = "^0.2.3", extras = ["default"] }
nonebot-plugin-datastore = "^1.0.0"

[tool.nonebot]
plugins = ["nonebot_plugin_shindan"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
