[tool.poetry]
name = "nonebot_plugin_shindan"
version = "0.6.4"
description = "Nonebot2 plugin for using ShindanMaker"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-shindan"
repository = "https://github.com/noneplugin/nonebot-plugin-shindan"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3.0"
nonebot-plugin-alconna = ">=0.46.3,<1.0.0"
nonebot-plugin-htmlrender = "^0.3.0"
nonebot-plugin-orm = ">=0.7.0,<1.0.0"
nonebot-plugin-uninfo = ">=0.4.0,<1.0.0"
httpx = ">=0.20.0,<1.0.0"
lxml = "^5.0.0"
Jinja2 = "^3.0.0"
beautifulsoup4 = "^4.0.0"

[tool.poetry.group.dev.dependencies]
nonebot-plugin-orm = { version = ">=0.7.0,<1.0.0", extras = ["default"] }

[tool.nonebot]
plugins = ["nonebot_plugin_shindan"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
